# HW3-Clustering

./: README.md  main.py  pyproject.toml  requirements.txt
cluster/: __init__.py  kmeans.py  silhouette.py
test/: test_kmeans.py  test_silhouette.py
